<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_package" translatable="false">com.alaaeltaweel.thikrallah</string>
    <string name="contact_developer_uri" translatable="false">mailto:28.hani@gmail.com</string>
    <string name="invalid_input">إدخال الوقت غير صحيح</string>
    <string name="help_translate">ساعدنا بترجمة البرنامج</string>
    <string name="offer_translate_help">ارغب في المساعدة بترجمة برنامج اذكر الله</string>
    <string name="my_app_name">محمد عبد العظيم (اذكر الله)</string>
    <string name="share">شارك</string>
    <string name="playstore_not_exist">جوجل بلاي او متصفح انترنت غير محمل على هذا الجهاز</string>
    <string name="browser_not_exist"> متصفح انترنت غير محمل على هذا الجهاز</string>
    <string name="email_client_not_exist">لا يوجد برنامج بريد الكتروني محمل على هذا الجهاز</string>
    <string name="qibla">القبلة</string>
    <string name="compass_dial" translatable="false">Compass Dial</string>
    <string name="compass_hands" translatable="false">Compass Hands</string>
    <string name="sotw_north">N</string>
    <string name="sotw_east">E</string>
    <string name="sotw_south">S</string>
    <string name="sotw_west">W</string>
    <string name="sotw_northeast">NE</string>
    <string name="sotw_northwest">NW</string>
    <string name="sotw_southeast">SE</string>
    <string name="sotw_southwest">SW</string>
    <string name="favorite_reciter">قارئ القرءان المفضل</string>
    <string name="quran_thikr_need_files">اضغط هنا لتحميل بعض الملفات لتفعيل التذكير الصوتي بالقرءان</string>
    <string name="quran_thikr_download_need_files_permission">التذكير الصوتي بالقرءان يحتاج ان يحمل الملفات الصوتية المطلوبة لكي تشتغل هذه الخاصية. هل تريد تحميل الملف الصوتي الان؟</string>
    <string name="quran_thikr_need_files_prompt_title">تحميل ملفات</string>
    <string name="power_Exclusion">استثناءات توفير الطاقة</string>
    <string name="power_Exclusion_message">الرجاء استثناء برنامج اذكر الله من خاصية توفير طاقة البطارية. هذا لكي تعمل التذكيرات والاذان في وقتهم الصحيح بدون تأخير. لا تقلق فالبرنامج لن يستعمل من البطارية الا نسبة بسيطة جدا.</string>
    <string name="autostart">تفعيل التشغل الذاتي</string>
    <string name="autostart_message">الرجاء السماح لبرنامجنا بالعمل بالخلفية حتى لو كان البرنامج مغلقا حتى يشتغل البرنامج بشكل صحيح.</string>
    <string name="battery_manual_title">مهم لضمان عمل الأذان في وقته</string>
    <string name="battery_manual_message">على بعض الأجهزة (مثل Infinix و Tecno)، يحتاج التطبيق إذن إضافي يدوي حتى يعمل الأذان والتذكيرات في وقتها بدون تأخير. الرجاء الدخول إلى صفحة إعدادات التطبيق التي ستفتح الآن، ثم: 1) اختر Battery واختر No restrictions أو Unrestricted، 2) اختر Permissions وفعّل Background activity إن وجد. هذه الخطوة مهمة جدًا وتُطلب مرة واحدة فقط.</string>
    <string name="device_optimization_button_title">تحسين إعدادات الجهاز</string>
    <string name="device_optimization_button_summary">لو الأذان أو التذكيرات مش بتشتغل في وقتها، دوس هنا لمراجعة إعدادات جهازك من جديد</string>
    <string name="pre_athan_reminder">تنبيه قبل الصلاة</string>
    <string name="pre_athan_fajr_enabled">تنبيه قبل الفجر</string>
    <string name="pre_athan_duhr_enabled">تنبيه قبل الظهر</string>
    <string name="pre_athan_asr_enabled">تنبيه قبل العصر</string>
    <string name="pre_athan_maghrib_enabled">تنبيه قبل المغرب</string>
    <string name="pre_athan_isha_enabled">تنبيه قبل العشاء</string>
    <string name="pre_athan_minutes">عدد الدقائق قبل الصلاة</string>
    <string name="athan_timer_notifiaction" translatable="false">Prayer Time Remaining</string>
    <string name="remember_notification" translatable="false">Remembrance of Allah</string>
    <string name="floating_notification" translatable="false">Remember Allah Floating Reminders</string>
    <string name="volume_level">مستوى صوت التذكير</string>
    <string name="screen_unlock_thikr_enabled">تذكير عند فتح الشاشة</string>
    <string name="screen_unlock_thikr_enabled_summary">يظهر ذكر مكتوب كل ما تفتح شاشة موبايلك (بحد أقصى مرة كل 7 دقايق)</string>
    <string name="translation_link" translatable="false">https://crowdin.com/project/thikrallah</string>
    <string name="mute_when_ringer_mute">كتم التذكير اذا الجهاز في وضع الصامت</string>
    <string name="morningThikr">أذكار الصباح</string>
    <string name="nightThikr">أذكار المساء</string>
    <string name="morningThikrSettings">أعدادات أذكار الصباح</string>
    <string name="nightThikrSettings">أعدادات أذكار المساء</string>
    <string name="Settings">الاعدادات</string>
    <string name="remindMeMorningThikr">تذكير بقراءة أذكار اصباح</string>
    <string name="remindMeNightThikr">تذكير بقراءة اذكار المساء</string>
    <string name="changeReminderTime">تعديل وقت التنبية</string>
    <string name="RemindMeSettings">اعدادات ذكرني بالله</string>
    <string name="general_thikr_reminder_type">طريقة التذكير بالله</string>
    <string name="RemindMeEvery">ذكرني بالله كل</string>
    <string name="RemindmeThroughTheDay">ذكرني بالله على مدى اليوم</string>
    <string name="whatsnew">تم اضافة القرءان الكريم كاملا الى البرنامج. الشكر لمبرمجي برنامج قرءان اندرويد لاتاحتهم لنا برنامجهم لكي ندمجة مع برنامجنا فلا تنسوهم وتنسونا من الدعاء. تستطيع تغيير قرائك المفضل من اعدادات البرنامج لتذكيرات القرءان</string>
    <string name="contactUs">تواصل معنا</string>
    <string name="email_Us">تواصل معنا عبر البريد الالكتروني</string>
    <string name="email_subject">مقترحات على برنامج اذكر الله</string>
    <string name="quiet_time">وقت عدم التذكير الصوتي</string>
    <string name="quiet_time_choice">اوقف التذكير الصوتي في هذه الاوقات</string>
    <string name="quiet_time_after_athan_choice">لا تذكير صوتي بعد الاذان</string>
    <string name="quiet_time_after_athan_choice_summary">اوقف التذكير الصوتي بعد الاذان بنصف ساعه</string>
    <string name="quiet_time_start">وقت عدم التذكير يبدأ في</string>
    <string name="quiet_time_end">وقت عدم التذكير ينتهي في</string>
    <string name="rate_message">اذا لديك اي انطباع سلبي او ايجابي باستخدام برنامجنا يرجى اخذ لحظه من وقتك لتقييم البرنامج حتى نستطيع تحسين البرنامج الى الافضل ان شاء الله. ايظا يرجى دعم المبرمج بالضغط على الدعايات بين الحين والاخر. وشكرا.</string>
    <string name="rate">قيم البرنامج</string>
    <string name="remind_later">ذكرني مره اخرى</string>
    <string name="dont_rate">لا اريد تقييم البرنامج</string>
    <string name="quiet_time_endvalue" translatable="false">06:00</string>
    <string name="athan">الاذان</string>
    <string name="sunrise">شروق الشمس</string>
    <string name="sunset">غروب الشمس</string>
    <string name="prayer1">صلاة الفجر</string>
    <string name="prayer2">صلاة الظهر</string>
    <string name="prayer3">صلاة العصر</string>
    <string name="prayer4">صلاة المغرب</string>
    <string name="prayer5">صلاة العشاء</string>
    <string name="open_settings">افتح الاعدادات</string>
    <string name="my_athkar">اذكاري</string>
    <string name="cancel">الغاء</string>
    <string name="add_thikr">اضف ذكر</string>
    <string name="add_thikr_hint">اكتب نص ذكرك هنا</string>
    <string name="one_thikr_warning">من الضروري ان يكون على الاقل واحد من الاذكار المحمل مع البرنامج مفعلا</string>
    <string name="notification_sound_and_text">تذكير صوتي وتذكير كتابي</string>
    <string name="notification_sound_only">تذكير صوتي فقط</string>
    <string name="notification_text_only">تذكير كتابي فقط</string>
    <string name="play_athkar_at_notification_time">تشغيل الاذكار صوتيا في وقت الاشعار</string>
    <string name="one_minute">1 دقيقة</string>
    <string name="five_minutes">5 دقائق</string>
    <string name="ten_minutes">10 دقائق</string>
    <string name="fifteen_minutes">15 دقيقة</string>
    <string name="thirty_minutes">30 دقيقة</string>
    <string name="one_hour">1 ساعة</string>
    <string name="two_hours">2 ساعات</string>
    <string name="three_hours">3 ساعات</string>
    <string name="four_hours">4 ساعات</string>
    <string name="five_hours">5 ساعات</string>
    <string name="six_hours">6 ساعات</string>
    <string name="seven_hours">7 ساعات</string>
    <string name="eight_hours">8 ساعات</string>
    <string name="nine_hours">9 ساعات</string>
    <string name="ten_hours">10 ساعات</string>
    <string name="eleven_hours">11 ساعات</string>
    <string name="twelve_hours">12 ساعات</string>
    <string name="thikr1">سبحان الله</string>
    <string name="thikr2">الحمدلله</string>
    <string name="thikr3">لا اله الا الله</string>
    <string name="thikr4">الله اكبر</string>
    <string name="thikr5">لا حول ولا قوة الا بالله</string>
    <string name="thikr6">نذكركم بالصلاة على الحبيب</string>
    <string name="thikr7">استغفرالله</string>
   <string name="thikr8">اللهم صلي وسلم على سيدنا محمد</string>
   <string name="thikr9">ربنا اغفرلي ولوالدي</string>
    <string name="thikr10">اللهم صلى وسلم وبارك على سيدنا محمد</string>
   <string name="thikr11">سبحان الله وبحمده</string>
    <string name="thikr12">اية الأحزاب</string>
    <string name="thikr_kursi">اللّهُ لاَ إِلَهَ إِلاَّ هُوَ الْحَيُّ الْقَيُّومُ لاَ تَأْخُذُهُ سِنَةٌ وَلاَ نَوْمٌ لَّهُ مَا فِي السَّمَوَاتِ وَمَا فِي الأَرْضِ مَن ذَا الَّذِي يَشْفَعُ عِنْدَهُ إِلاَّ بِإِذْنِهِ يَعْلَمُ مَا بَيْنَ أَيْدِيهِمْ وَمَا خَلْفَهُم وَلاَ يُحِيطُونَ بِشَيْءٍ مِّنْ عِلْمِهِ إِلاَّ بِمَا شَاء وَسِعَ كُرْسِيُّهُ السَّمَوَاتِ وَالأَرْضَ وَلاَ يَؤُودُهُ حِفْظُهُمَا وَهُوَ الْعَلِيُّ الْعَظِيم</string>
    <string name="thikr_iklhlas">قُلۡ هُوَ اللّٰہُ اَحَدٌ. اَللّٰہُ الصَّمَدُ. لَمۡ یَلِدۡۙ وَ لَمۡ یُوۡلَدۡ. وَ لَمۡ یَکُنۡ لَّهّ کُفُوًا اَحَدٌ -3 مرات</string>
    <string name="thikr_alfalak">قُلْ أَعُوذُ بِرَبِّ الْفَلَقِ. مِنْ شَرِّ مَا خَلَقَ. وَمِنْ شَرِّ غَاسِقٍ إِذَا وَقَبَ. وَمِنْ شَرِّ النَّفَّاثَاتِ فِي الْعُقَدِ. وَمِنْ شَرِّ حَاسِدٍ إِذَا حَسَدَ -3 مرات</string>
    <string name="thikr_alnas">قُل أَعُوذُ بِرَبِّ ٱلنَّاسِ. مَلِكِ ٱلنَّاسِ. إِلَـٰهِ ٱلنَّاسِ. مِن شَرِّ ٱلوَسوَاسِ ٱلخَنَّاسِ. ٱلَّذِي يُوَسۡوِسُ فِى صُدُورِ ٱلنَّاسِ.مِنَ ٱلجِنَّةِ وَٱلنَّاسِ -3 مرات</string>
    <string name="morning_thikr1">أَصْـبَحْنا وَأَصْـبَحَ المُـلْكُ لله وَالحَمدُ لله ، لا إلهَ إلاّ اللّهُ وَحدَهُ لا شَريكَ لهُ، لهُ المُـلكُ ولهُ الحَمْـد، وهُوَ على كلّ شَيءٍ قدير ، رَبِّ أسْـأَلُـكَ خَـيرَ ما في هـذا اليوم وَخَـيرَ ما بَعْـدَه ، وَأَعـوذُ بِكَ مِنْ شَـرِّ هـذا اليوم وَشَرِّ ما بَعْـدَه، رَبِّ أَعـوذُبِكَ مِنَ الْكَسَـلِ وَسـوءِ الْكِـبَر ، رَبِّ أَعـوذُبِكَ مِنْ عَـذابٍ في النّـارِ وَعَـذابٍ في القَـبْر</string>
    <string name="morning_thikr2">اللّهُـمَّ بِكَ أَصْـبَحْنا وَبِكَ أَمْسَـينا ، وَبِكَ نَحْـيا وَبِكَ نَمُـوتُ وَإِلَـيْكَ النُّـشُور</string>
    <string name="language">اللغه</string>
    <string name="remindMekahf">ذكرني بقراءة سورة الكهف</string>
    <string name="kahf_reminder_type">طريقة التذكير بسورة الكهف</string>
    <string name="calc_method">طريقة الحساب</string>
    <string name="asr_calc_method">طريقة حساب وقت العصر</string>
    <string name="fajr_reminder_type">طريقة تنبية صلاة الفجر</string>
    <string name="duhr_reminder_type">طريقة تنبية صلاة الظهر</string>
    <string name="asr_reminder_type">طريقة تنبية صلاة العصر</string>
    <string name="maghrib_reminder_type">طريقة تنبية صلاة المغرب</string>
    <string name="isha_reminder_type">طريقة تنبية صلاة العشاء</string>
    <string name="high_latitude_adjustment">تعديل الوقت للمناطق الشمالية</string>
    <string name="athan_type">طريقة التذكير بالصلاة</string>
    <string name="QuranThikrSettings">اعدادات التذكير بالقرءان</string>
    <string name="remindMemulk">ذكرني بقراءة سورة الملك</string>
    <string name="mulk_reminder_type">طريقة التذكير بسورة الملك</string>
    <string name="gradual_volume">رفع صوت الاذان تدريجيا</string>
    <string name="is_foreground_athan_timer">اظهار الوقت المتبقي للصلاةدائما</string>
</resources>