<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    app:iconSpaceReserved="false"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/RemindMeSettings"
        android:layout="@layout/preference_catagory">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="RemindmeThroughTheDay"
            android:title="@string/RemindmeThroughTheDay" />
        <com.alaaeltaweel.thikrallah.Utilities.MyListPreference
            android:defaultValue="30"
            android:entries="@array/ReminderIncrementOptions"
            android:entryValues="@array/ReminderIncrementValues"
            android:key="RemindMeEvery"
            android:title="@string/RemindMeEvery" />
        <com.alaaeltaweel.thikrallah.Utilities.MyListPreference
            android:defaultValue="1"
            android:entries="@array/RemindmeThroughTheDayType"
            android:entryValues="@array/RemindmeThroughTheDayTypeValues"
            android:key="RemindmeThroughTheDayType"
            android:title="@string/general_thikr_reminder_type" />
        <com.alaaeltaweel.thikrallah.Utilities.SeekBarPreference
            android:defaultValue="100"
            android:key="volume"
            android:title="@string/volume_level"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/quiet_time"
        android:layout="@layout/preference_catagory">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="quiet_time_choice"
            android:title="@string/quiet_time_choice" />
        <com.alaaeltaweel.thikrallah.Utilities.TimePreference
            android:defaultValue="22:00"
            android:key="quiet_time_start"
            android:title="@string/quiet_time_start" />
        <com.alaaeltaweel.thikrallah.Utilities.TimePreference
            android:defaultValue="@string/quiet_time_endvalue"
            android:key="quiet_time_end"
            android:title="@string/quiet_time_end" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="quiet_time_after_athan_choice"
            android:title="@string/quiet_time_after_athan_choice"
            android:summary="@string/quiet_time_after_athan_choice_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/morningThikrSettings"
        android:layout="@layout/preference_catagory">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="remindMeMorningThikr"
            android:title="@string/remindMeMorningThikr" />
        <com.alaaeltaweel.thikrallah.Utilities.TimePreference
            android:defaultValue="08:00"
            android:key="daytReminderTime"
            android:title="@string/changeReminderTime" />
        <com.alaaeltaweel.thikrallah.Utilities.MyListPreference
            android:defaultValue="1"
            android:entries="@array/RemindmeType"
            android:entryValues="@array/RemindmeTypeValues"
            android:key="remindMeDayThikrType"
            android:title="@string/general_thikr_reminder_type" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/nightThikrSettings"
        android:layout="@layout/preference_catagory">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="remindMeNightThikr"
            android:title="@string/remindMeNightThikr" />
        <com.alaaeltaweel.thikrallah.Utilities.TimePreference
            android:defaultValue="20:00"
            android:key="nightReminderTime"
            android:title="@string/changeReminderTime" />
        <com.alaaeltaweel.thikrallah.Utilities.MyListPreference
            android:defaultValue="1"
            android:entries="@array/RemindmeType"
            android:entryValues="@array/RemindmeTypeValues"
            android:key="remindMeNightThikrType"
            android:title="@string/general_thikr_reminder_type" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/QuranThikrSettings"
        android:layout="@layout/preference_catagory">
        <com.alaaeltaweel.thikrallah.Utilities.MyListPreference
            android:defaultValue="11"
            android:entries="@array/quran_readers_name"
            android:entryValues="@array/quran_readers_value"
            android:key="quran_readers_name"
            android:title="@string/favorite_reciter" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="remindMekahf"
            android:title="@string/remindMekahf" />
        <com.alaaeltaweel.thikrallah.Utilities.TimePreference
            android:defaultValue="10:00"
            android:key="kahfReminderTime"
            android:title="@string/changeReminderTime" />
        <com.alaaeltaweel.thikrallah.Utilities.MyListPreference
            android:defaultValue="1"
            android:entries="@array/RemindmeType"
            android:entryValues="@array/RemindmeTypeValues"
            android:key="remindMekahfType"
            android:title="@string/kahf_reminder_type" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="remindMemulk"
            android:title="@string/remindMemulk" />
        <com.alaaeltaweel.thikrallah.Utilities.TimePreference
            android:defaultValue="21:00"
            android:key="mulkReminderTime"
            android:title="@string/changeReminderTime" />
        <com.alaaeltaweel.thikrallah.Utilities.MyListPreference
            android:defaultValue="1"
            android:entries="@array/RemindmeType"
            android:entryValues="@array/RemindmeTypeValues"
            android:key="remindMemulkType"
            android:title="@string/mulk_reminder_type" />
    </PreferenceCategory>

    <!-- ✅ إعدادات رمضان -->
    <PreferenceCategory
        android:title="إعدادات رمضان 🌙"
        android:layout="@layout/preference_catagory">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="ramadan_cannon_enabled"
            android:title="مدفع رمضان 🔊"
            android:summary="يشتغل وقت الإفطار في رمضان" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="ramadan_mesaharaty_enabled"
            android:title="المسحراتي 🥁"
            android:summary="يشتغل في الوقت الذي تحدده" />

        <com.alaaeltaweel.thikrallah.Utilities.TimePreference
            android:defaultValue="03:00"
            android:key="mesaharaty_time"
            android:title="وقت المسحراتي"
            android:dependency="ramadan_mesaharaty_enabled" />
      </PreferenceCategory>

    <PreferenceCategory
    android:title="🤲 الدعاء بعد الأذان"
    android:layout="@layout/preference_catagory">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="isDuaAfterAthan"
        android:title="تفعيل الدعاء بعد الأذان"
        android:summary="يشغل دعاء الأذان بعد انتهائه" />

</PreferenceCategory>
    
        <!-- ✅ الوضع الصامت أثناء الصلاة -->
    <PreferenceCategory
        android:title="الوضع الصامت أثناء الصلاة 🔕"
        android:layout="@layout/preference_catagory">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="isSilentModeDuringPrayer"
            android:title="تفعيل الوضع الصامت وقت الصلاة"
            android:summary="الموبايل يتحول للاهتزاز تلقائيًا وقت كل صلاة" />

        <EditTextPreference
            android:defaultValue="15"
            android:key="silentModeDurationMinutes"
            android:title="مدة الوضع الصامت (بالدقائق)"
            android:dependency="isSilentModeDuringPrayer"
            android:inputType="number" />
        

        
        <Preference
            android:key="open_dnd_access_settings"
            android:title="منح إذن عدم الإزعاج (DND)"
            android:summary="مطلوب مرة واحدة عشان الميزة تشتغل، دوس هنا وفعّل التطبيق من القائمة">
            <intent android:action="android.settings.NOTIFICATION_POLICY_ACCESS_SETTINGS" />
        </Preference>

    </PreferenceCategory>
    <PreferenceCategory
    android:title="إعدادات التاريخ الهجري"
    android:layout="@layout/preference_catagory">

    <com.alaaeltaweel.thikrallah.Utilities.MyListPreference
        android:defaultValue="0"
        android:entries="@array/hijri_offset_entries"
        android:entryValues="@array/hijri_offset_values"
        android:key="hijri_offset"
        android:title="تعديل التاريخ الهجري"
        android:summary="في حالة اختلاف التاريخ عن الرؤية" />

</PreferenceCategory>

</PreferenceScreen>
