<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="استقرار الأذان والتذكيرات"
        android:layout="@layout/preference_catagory">
        <Preference
            android:key="device_optimization_button"
            android:title="@string/device_optimization_button_title"
            android:summary="@string/device_optimization_button_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="إهداء"
        android:layout="@layout/preference_catagory">
        <Preference
            android:layout="@layout/dedication_layout"
            android:selectable="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/language"
        android:layout="@layout/preference_catagory">
        <com.alaaeltaweel.thikrallah.Utilities.MyListPreference
            android:entries="@array/languagelist"
            android:entryValues="@array/languagelistValues"
            android:key="language"
            android:title="@string/language" />
    </PreferenceCategory>

</PreferenceScreen>
